--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html>
     <head>
       <title>My Personal Introduction</title>
-      <style>
-        body{background-color:EBD886;}
-        h1{color:2D4A4F;}
-        p{color:062226;}
-      </style>
+    <style>
+        body{background-color:#EBD886;}
+        h1{color:#2D4A4F;}
+        p{color:#062226;}
+    </style>
     </head>
     <body>
         <h1>My Name is Korey Floyd</h1>
